[package]
name = "yalp"
version = "0.1.0"
authors = ["Marcus Klaas <mail@marcusklaas.nl>"]

[dependencies]
rustyline = "*"
clippy = {version = "*", optional = true}

[dependencies.string-interner]
version = "*"
default-features = false
features = []

[features]
default = []

[lib]
name = "yalp"

[[bin]]
name = "yalp"

[profile.release]
debug = true
lto = false

