[package]
name = "yalp"
version = "0.1.0"
authors = ["Marcus Klaas <mail@marcusklaas.nl>"]

[dependencies]

[dependencies.string-interner]
version = "*"
default-features = false
features = []

[dev-dependencies]
quickcheck = "1"
quickcheck_macros = "1"

[features]
default = []

[lib]
name = "yalp"

[profile.release]
debug = true
lto = false

